# finetuning-study

./: .gitignore  DEMO_GUIDE.md  README.md  pyproject.toml
notebooks/: finetuning_study.ipynb
results/: ablation_results.csv
results/runs/: r16_a32.json  r16_a32_logs.json  r2_a8.json  r4_a16.json  r8_a16.json  r8_a32.json  r8_a32_logs.json
src/: data_prep.py  evaluation.py  lora_config.py  training.py  visualization.py
tests/: test_modules.py
