[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finetuning-study"
version = "0.1.0"
description = "LoRA fine-tuning study on GPT-2 with systematic hyperparameter ablation and evaluation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Chris Schmidt"}]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.11",
    "datasets>=2.19",
    "evaluate>=0.4",
    "rouge-score>=0.1",
    "bert-score>=0.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.18",
    "kaleido>=0.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
